apps/base/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: arctic
spec:
  selector:
    app: home-assistant
  ports:
    - port: 8123
      targetPort: 8123
  type: ClusterIP
